moved from xml to json responses

--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,11 @@
         	<groupId>org.hibernate.javax.persistence</groupId>
         	<artifactId>hibernate-jpa-2.0-api</artifactId>
         </dependency>
+        <dependency>
+        	<groupId>com.fasterxml.jackson.core</groupId>
+        	<artifactId>jackson-core</artifactId>
+        	<type>bundle</type>
+        </dependency>
     </dependencies>
 
     <build>
