--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,10 @@
         	<artifactId>jackson-core</artifactId>
         	<type>bundle</type>
         </dependency>
+        <dependency>
+        	<groupId>commons-dbcp</groupId>
+        	<artifactId>commons-dbcp</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
