--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,12 @@ local.properties
 # TeXlipse plugin
 .texlipse
 
+
+### Maven ###
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+
