--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 		</dependency>
+		<dependency>
+		    <groupId>org.hibernate</groupId>
+		    <artifactId>hibernate-core</artifactId>
+		    <version>3.6.0.Final</version>
+		</dependency>
 		
     	<!-- Spring -->
 		<dependency>
@@ -111,6 +116,21 @@
         	<groupId>commons-dbcp</groupId>
         	<artifactId>commons-dbcp</artifactId>
         </dependency>
+        <dependency>
+        	<groupId>org.hibernate</groupId>
+        	<artifactId>hibernate-annotations</artifactId>
+        	<version>3.3.1.GA</version>
+        </dependency>
+        <dependency>
+        	<groupId>org.hibernate</groupId>
+        	<artifactId>hibernate-commons-annotations</artifactId>
+        	<version>3.2.0.Final</version>
+        </dependency>
+        <dependency>
+        	<groupId>org.hibernate</groupId>
+        	<artifactId>hibernate-entitymanager</artifactId>
+        	<version>3.6.0.Final</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -130,6 +150,10 @@
         <repository>
             <id>spring-releases</id>
             <url>http://repo.spring.io/libs-release</url>
+        </repository>
+        <repository>
+        <id>maven</id>
+        <url>http://download.java.net/maven/2/</url>
         </repository>
     </repositories>
     <pluginRepositories>
