--- a/pom.xml
+++ b/pom.xml
@@ -22,26 +22,25 @@
     <dependencies>
     
     	<!-- Hibernate -->
-    	<dependency>
-        	<groupId>org.hibernate</groupId>
-        	<artifactId>hibernate</artifactId>
-        	<version>3.2.6.ga</version>
-        </dependency>
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 		</dependency>
-		<dependency>
-		    <groupId>org.hibernate</groupId>
-		    <artifactId>hibernate-core</artifactId>
-		    <version>3.6.0.Final</version>
-		</dependency>
+        <dependency>
+        	<groupId>org.hibernate</groupId>
+        	<artifactId>hibernate-entitymanager</artifactId>
+        	<version>3.6.0.Final</version>
+        </dependency>
 		
     	<!-- Spring -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
-			</dependency>
+		</dependency>
+		<dependency>
+        	<groupId>org.springframework</groupId>
+        	<artifactId>spring-context-support</artifactId>
+        </dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
@@ -115,21 +114,6 @@
         <dependency>
         	<groupId>commons-dbcp</groupId>
         	<artifactId>commons-dbcp</artifactId>
-        </dependency>
-        <dependency>
-        	<groupId>org.hibernate</groupId>
-        	<artifactId>hibernate-annotations</artifactId>
-        	<version>3.3.1.GA</version>
-        </dependency>
-        <dependency>
-        	<groupId>org.hibernate</groupId>
-        	<artifactId>hibernate-commons-annotations</artifactId>
-        	<version>3.2.0.Final</version>
-        </dependency>
-        <dependency>
-        	<groupId>org.hibernate</groupId>
-        	<artifactId>hibernate-entitymanager</artifactId>
-        	<version>3.6.0.Final</version>
         </dependency>
     </dependencies>
 
