--- a/pom.xml
+++ b/pom.xml
@@ -106,14 +106,16 @@
         	<artifactId>commons-dbcp</artifactId>
         </dependency>
         <dependency>
-        	<groupId>org.codehaus.jackson</groupId>
-        	<artifactId>jackson-core-lgpl</artifactId>
-        	<version>1.9.2</version>
+        	<groupId>com.fasterxml.jackson.core</groupId>
+        	<artifactId>jackson-annotations</artifactId>
         </dependency>
         <dependency>
-        	<groupId>org.codehaus.jackson</groupId>
-        	<artifactId>jackson-mapper-lgpl</artifactId>
-        	<version>1.9.2</version>
+        	<groupId>com.fasterxml.jackson.core</groupId>
+        	<artifactId>jackson-core</artifactId>
+        </dependency>
+        <dependency>
+        	<groupId>com.fasterxml.jackson.core</groupId>
+        	<artifactId>jackson-databind</artifactId>
         </dependency>
 	</dependencies>
 
@@ -139,6 +141,10 @@
         <id>maven</id>
         <url>http://download.java.net/maven/2/</url>
         </repository>
+        <repository>
+      		<id>JBoss repository</id>
+      		<url>http://snapshots.jboss.org/maven2</url>
+    	</repository>
     </repositories>
     <pluginRepositories>
         <pluginRepository>
